<resources>
    <string name="app_name">Big Brother</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="buttonLogin">Log in</string>
    <string name="buttonRegister">Register</string>
    <string name="buttonSubmit">Submit</string>
    <string name="takePic">Take Picture</string>
    <string name="mapViewButton">Map View</string>
    <string name="taskListView">Task List View</string>
    <string name="signOutButton">Sign Out</string>
    <string name="clockInOut">Clock In / Out</string>
    <string name="textViewWelcomeHome">Welcome User</string>
    <string name="mapInfo">Map information</string>
    <string name="nameLabel">Name</string>
    <string name="workGroupLabel">Work Group</string>
    <string name="confirmPassLabel">Confirm</string>
    <string name="nameTextArea">Name</string>
    <string name="signInLabel">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="registerUrl">http://big-brother-cop4331.herokuapp.com/employee/register</string>
    <string name="loginUrl">http://big-brother-cop4331.herokuapp.com/employee/login</string>
    <string name="clockUrl">http://big-brother-cop4331.herokuapp.com/employee/clock</string>
    <string name="uploadUrl">http://big-brother-cop4331.herokuapp.com/employee/upload</string>
    <string name="tasksUrl">http://big-brother-cop4331.herokuapp.com/employee/tasks</string>
    <string name="title_activity_maps">Map</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="UsernameLabel">Username</string>
    <string name="PasswordLabel">Password</string>
    <string name="re_enter_passwordLabel">Re-enter Password</string>
    <string name="first_name">First Name</string>
    <string name="newUser">New user Sign In</string>
    <string name="not_a_member">Not a member?</string>
    <string name="log_in">Log In</string>
</resources>
